Fix .main overflow, add font-family

--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,400&display=swap');
+
 :root {
     --clr-blue: #1992d4;
     --clr-offwhite: #e2e8f0;
     --clr-text-light: rgb(80, 80, 80);
-    /* --clr-text-light: red; */
 }
 
 body {
-    font-family: sans-serif;
-    /* height: 100vh; */
-    /* overflow: hidden; */
+    font-family: 'Roboto', sans-serif;
 }
 
 button, input {
@@ -32,15 +31,15 @@ li {
     display: grid;
     grid-template-columns: 300px 1fr;
     grid-template-rows: 10rem 1fr; 
-    min-height: 100vh;
+    max-height: 100vh;
 }
 
 
         /* header section start */
 
 .header {
-    /* grid-column: 2 / 3; */
-    /* grid-row: 1; */
+    grid-column: 2 / 3;
+    grid-row: 1;
     background-color: aliceblue;
     padding: 1rem 2rem;
     display: inline-grid;
@@ -184,11 +183,6 @@ button {
     overflow: auto;
 }
 
-.project-container {
-    /* min-height: 100%; */
-    overflow: auto;
-}
-
 .section-title {
     font-size: 1.25rem;
     padding-bottom: 7px;
@@ -199,8 +193,6 @@ button {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: 200px;
     gap: 1rem;
-    /* max-height: 100%; */
-    /* overflow-y: auto; */
 }
 
 .project-cards {
